--- a/DevCommunity_Backend/package.json
+++ b/DevCommunity_Backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.19.1",
     "nodemo": "^1.0.0",
     "nodemon": "^3.1.11",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.15"
   }
 }
